--- a/RegisterApp/app/build.gradle
+++ b/RegisterApp/app/build.gradle
@@ -38,6 +38,7 @@ android {
 
 dependencies {
     implementation "androidx.room:room-runtime:$room_version"
+    testImplementation 'junit:junit:4.12'
     kapt "androidx.room:room-compiler:$room_version"
     implementation 'com.sun.mail:android-mail:1.6.4'
     implementation "androidx.room:room-ktx:$room_version"
