--- a/RegisterApp/app/src/main/AndroidManifest.xml
+++ b/RegisterApp/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:name=".RegisterApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="@string/com.hfad.registerapp.app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.RegisterApp">
