--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.hfad.budda">
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
     <application
         android:name=".BuddhaApplication"
         android:allowBackup="true"
@@ -30,10 +29,8 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
-        <service
-            android:name=".QuoteService"
-            android:enabled="true"
-            android:exported="false"
-            android:permission="TODO" />
+        <receiver
+            android:name=".NotifyAlarm"
+            android:enabled="true"/>
     </application>
 </manifest>
