--- a/Buddha/app/build.gradle
+++ b/Buddha/app/build.gradle
@@ -37,6 +37,8 @@ android {
 
 dependencies {
 
+    implementation 'com.sun.mail:android-mail:1.6.6'
+    implementation 'com.sun.mail:android-activation:1.6.6'
     implementation "androidx.room:room-runtime:2.4.2"
     implementation 'androidx.preference:preference:1.1.1'
     kapt "androidx.room:room-compiler:2.4.2"
